fix gaps between icon and text

--- a/src/components/Gallery/index.module.scss
+++ b/src/components/Gallery/index.module.scss
@@ -56,3 +56,6 @@
 .instashot5{
     opacity: 30%;
 }
+.media h5{
+    margin-left: 8px;
+}
